feat: add compass

--- a/src/patternfly/components/ActionList/action-list.hbs
+++ b/src/patternfly/components/ActionList/action-list.hbs
@@ -1,4 +1,4 @@
-<div class="{{pfv}}action-list{{#if action-list--modifier}} {{action-list--modifier}}{{/if}}{{#if action-list--isVertical}} pf-m-vertical{{/if}}"
+<div class="{{pfv}}action-list{{#if action-list--modifier}} {{action-list--modifier}}{{/if}}{{#if action-list--IsVertical}} pf-m-vertical{{/if}}"
   {{#if action-list--attribute}}
     {{{action-list--attribute}}}
   {{/if}}>
