--- a/src/patternfly/components/Tabs/tabs-scroll-button.hbs
+++ b/src/patternfly/components/Tabs/tabs-scroll-button.hbs
@@ -6,6 +6,7 @@
     aria-hidden="true"
   {{/if}}>
   {{> button
+    button--IsSmall=tabs--IsNav
     button--IsPlain=true
     button--IsDisabled=tabs-scroll-button--IsDisabled
     button--IsIcon=true
