--- a/src/patternfly/components/Tabs/tabs.hbs
+++ b/src/patternfly/components/Tabs/tabs.hbs
@@ -7,7 +7,7 @@
   {{~#if tabs--HasNoBorderBottom}} pf-m-no-border-bottom{{/if}}
   {{~#if __tabs-list--IsOverflow}} pf-m-overflow{{/if}}
   {{~#if tabs--IsAnimateCurrent}} pf-m-animate-current{{/if}}
-  {{~#if tabs--isNav}} pf-m-nav{{/if}}
+  {{~#if tabs--IsNav}} pf-m-nav{{/if}}
   {{~#if tabs--modifier}} {{tabs--modifier}}{{/if}}"
   {{#if tabs--attribute}}
     {{{tabs--attribute}}}
