--- a/src/patternfly/components/_index.scss
+++ b/src/patternfly/components/_index.scss
@@ -18,6 +18,7 @@
 @use "./ClipboardCopy/clipboard-copy";
 @use "./CodeBlock/code-block";
 @use "./CodeEditor/code-editor";
+@use "./Compass/compass";
 @use "./Content/content";
 @use "./DataList/data-list";
 @use "./DescriptionList/description-list";
