--- a/src/patternfly/sass-utilities/namespaces-components.scss
+++ b/src/patternfly/sass-utilities/namespaces-components.scss
@@ -63,6 +63,9 @@ $code-block: #{$pf-prefix} + 'c-code-block';
 // Code Editor
 $code-editor: #{$pf-prefix} + 'c-code-editor';
 
+// Compass
+$compass: #{$pf-prefix} + 'c-compass';
+
 // Content
 $content: #{$pf-prefix} + 'c-content';
 
