chore: update img paths so prod server serves them

--- a/src/patternfly/components/Compass/compass.scss
+++ b/src/patternfly/components/Compass/compass.scss
@@ -32,11 +32,11 @@
   --#{$compass}__hero--gradient--stop-1--light: transparent;
   --#{$compass}__hero--gradient--stop-2--light: transparent;
   --#{$compass}__hero--gradient--stop-3--light: transparent;
-  --#{$compass}__hero--gradient--stop-1--dark: transparent; // #000;
-  --#{$compass}__hero--gradient--stop-2--dark: transparent; // #1b0d33;
-  --#{$compass}__hero--gradient--stop-3--dark: transparent; //  #3d2785;
-  --#{$compass}__hero--BackgroundImage--light: none; // url("./assets/images/compass--hero-bg.png");
-  --#{$compass}__hero--BackgroundImage--dark: none; // url("./assets/images/compass--hero-bg.png");
+  --#{$compass}__hero--gradient--stop-1--dark: transparent;
+  --#{$compass}__hero--gradient--stop-2--dark: transparent;
+  --#{$compass}__hero--gradient--stop-3--dark: transparent;
+  --#{$compass}__hero--BackgroundImage--light: none;
+  --#{$compass}__hero--BackgroundImage--dark: none;
   --#{$compass}__hero-body--Width: 800px;
   --#{$compass}__hero-body--MaxWidth: 80%;
 }
