--- a/src/patternfly/demos/Compass/compass--demo-context.hbs
+++ b/src/patternfly/demos/Compass/compass--demo-context.hbs
@@ -3,12 +3,12 @@
       --pf-v6-c-compass__hero--gradient--stop-1--dark: #3d2785;
       --pf-v6-c-compass__hero--gradient--stop-2--dark: #1b0d33;
       --pf-v6-c-compass__hero--gradient--stop-3--dark: #000;
-      --pf-v6-c-compass__hero--BackgroundImage--light: url(./assets/images/compass--hero-bg.png);
-      --pf-v6-c-compass__hero--BackgroundImage--dark: url(./assets/images/compass--hero-bg.png);
+      --pf-v6-c-compass__hero--BackgroundImage--light: url(/assets/images/compass--hero-bg.png);
+      --pf-v6-c-compass__hero--BackgroundImage--dark: url(/assets/images/compass--hero-bg.png);
     "'
     compass--attribute='style="
-      --pf-v6-c-compass--BackgroundImage--light: url(./assets/images/compass--wallpaper-light.png);
-      --pf-v6-c-compass--BackgroundImage--dark: url(./assets/images/compass--wallpaper-dark.png);
+      --pf-v6-c-compass--BackgroundImage--light: url(/assets/images/compass--wallpaper-light.png);
+      --pf-v6-c-compass--BackgroundImage--dark: url(/assets/images/compass--wallpaper-dark.png);
     "'
 }}
   {{> @partial-block}}
