feat(drawer): add pill variant

--- a/src/patternfly/components/Drawer/drawer.hbs
+++ b/src/patternfly/components/Drawer/drawer.hbs
@@ -4,6 +4,7 @@
   {{~#if drawer--IsStatic}} pf-m-static{{/if}}
   {{~#if drawer--IsPanelLeft}} pf-m-panel-left{{/if}}
   {{~#if drawer--IsPanelBottom}} pf-m-panel-bottom{{/if}}
+  {{~#if drawer--IsPill}} pf-m-pill{{/if}}
   {{~#if drawer--modifier}} {{drawer--modifier}}{{/if}}"
   {{#if drawer--attribute}}
     {{{drawer--attribute}}}
